# DepthOfMarket

./: CMakeLists.txt  LICENSE  Makefile  README.md  depth_of_market
includes/: DepthOfMarket.h  LogDuration.h
src/: DepthOfMarket.cc  main.cc
